<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.fluidity</groupId>
    <artifactId>parent</artifactId>
    <name>Fluidity</name>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.plugins.version>3.8.1</maven.plugins.version>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>

        <spotbugs.maven.plugin.version>3.1.12</spotbugs.maven.plugin.version>
        <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>

        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
        <quarkus.platform.artifact-id>quarkus-universe-bom</quarkus.platform.artifact-id>
        <quarkus-plugin.version>1.3.2.Final</quarkus-plugin.version>
        <quarkus.platform.version>1.3.2.Final</quarkus.platform.version>

        <junit.version>5.6.0</junit.version>
    </properties>

    <modules>
        <module>datagen</module>
        <module>web</module>
        <module>services</module>
        <module>search</module>
  </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <!-- logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>1.7.30</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.13.2</version>
        </dependency>

        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.2</version>
        </dependency>


        <!-- other -->
        <dependency>
            <groupId>org.lz4</groupId>
            <artifactId>lz4-java</artifactId>
            <version>1.7.1</version>
        </dependency>

        <dependency>
            <groupId>com.clearspring.analytics</groupId>
            <artifactId>stream</artifactId>
            <version>2.9.8</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.10.5</version>
        </dependency>

        <!-- test -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jmock</groupId>
            <artifactId>jmock</artifactId>
            <version>2.12.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
            <directory>test-data</directory>
        </testResource></testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <tarLongFileMode>posix</tarLongFileMode>
                        <descriptors>
                            <descriptor>src/assembly/package.xml</descriptor>
                        </descriptors>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.plugins.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all,-serial</arg>
                    </compilerArgs>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <configuration>
                    <propertiesLocation>checkstyle/checkstyle.properties</propertiesLocation>
                    <suppressionsLocation>checkstyle/suppressions.xml</suppressionsLocation>
                </configuration>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <reuseForks>false</reuseForks>
                    <workingDirectory>${project.build.directory}/..</workingDirectory>
                    <systemPropertyVariables>
<!--                        <log4j.configuration>file:${project.basedir}/../common/log4j.properties</log4j.configuration>-->
                    </systemPropertyVariables>
                    <argLine>-Dlog4j.debug=false  -Dfile.encoding:ISO-8859-1 -verbose:gc -Xloggc:"${project.build.directory}/gc.log"</argLine>
                    <excludes>
<!--                        <exclude>**/LookupClusterSpaceServiceTest.java</exclude>-->
                    </excludes>
                </configuration>
                <version>3.0.0-M4</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <configuration>
                            <rules>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <phase>validate</phase>
                    </execution>
                </executions>
            </plugin>

            <!--  <plugin>-->
            <!--                <groupId>com.github.spotbugs</groupId>-->
            <!--                <artifactId>spotbugs-maven-plugin</artifactId>-->
            <!--                <version>${spotbugs.maven.plugin.version}</version>-->
            <!--                <configuration>-->
            <!--                    <xmlOutput>true</xmlOutput>-->
            <!--&lt;!&ndash;                    <excludeFilterFile>./findbugs-exclude.xml</excludeFilterFile>&ndash;&gt;-->
            <!--                    <effort>Max</effort>-->
            <!--                    <threshold>Max</threshold>-->
<!--                    <failOnError>true</failOnError>-->
<!--                    <includeTests>true</includeTests>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    &lt;!&ndash;-->
<!--                    Ensures that FindBugs inspects source code when project is compiled.-->
<!--                &ndash;&gt;-->
<!--                    <execution>-->
<!--                        <id>analyze-compile</id>-->
<!--                        <phase>compile</phase>-->
<!--                        <goals>-->
<!--                            <goal>check</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
    <reporting>
        <plugins>

        </plugins>
    </reporting>
</project>